--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ google-cloud-storage==2.3.0
 google-crc32c==1.3.0
 google-resumable-media==2.3.3
 googleapis-common-protos==1.56.1
+gunicorn==20.1.0
 httplib2==0.20.4
 idna==3.3
 protobuf==3.20.1
